# Manokeso2

./: ;  Cargo.toml
src/: board_view.rs  camera.rs  client.rs  config.rs  handle_input.rs  input.rs  keybinds.rs  main.rs  message.rs  render.rs  res.rs  rsc.rs  state.rs  sync.rs  tile_view.rs  timer.rs  update.rs  view.rs
src/assets/: shader.wgsl
src/board/: attrs.rs  board.rs  gen.rs  instance.rs  mod.rs  refs.rs  save.rs  swap_buffer.rs  update.rs  util.rs  worker.rs
src/client/: app.rs  camera.rs  client.rs  config.rs  handle_input.rs  input.rs  keybinds.rs  mod.rs  player.rs  run.rs  state.rs  update.rs
src/client/rsc/: tile.wgsl
src/client/ui/: element.rs  layout.rs  mod.rs  shape.rs  text.rs  ui.rs
src/common/: interface.rs  message.rs  mod.rs  save.rs  view.rs
src/game/: board.rs  mod.rs
src/render/: buffer.rs  draw.rs  extract.rs  mod.rs  pipeline.rs  primitive.rs  render.rs  renderer.rs  rsc.rs  state.rs  surface.rs  tile.wgsl  ui.rs  uniform.rs  update.rs  writer.rs
src/render/buffer/: instance.rs  mod.rs  uniform.rs  vertex.rs
src/render/init/: render.rs  surface.rs
src/render/shader/: tile.wgsl
src/render/shape/: init.rs  instance.rs  mod.rs  pipeline.rs  shader.wgsl  uniform.rs
src/render/text/: pipeline.rs
src/render/texture/: init.rs  mod.rs  pipeline.rs  vertex.rs
src/util/: math.rs  mod.rs  noise.rs  point.rs  timer.rs
src/window/: buffer.rs  mod.rs  render.rs  res.rs  state.rs  uniform.rs
src/world/: alpha.rs  board.rs  connex_ref.rs  gen.rs  mod.rs  refs.rs  server.rs  swap_buffer.rs  update.rs  util.rs  world.rs
(+28 files in other folders)
