[package]
name = "manokeso2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1", features=["derive"]}
convolutions-rs = "0.3.4"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.18"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
noise = "0.8.2"
pollster = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
wgpu = "0.16.1"
winit = "0.28.6"
