[package]
name = "manokeso"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version="1.13.1", features=["derive"]}
dirs = "5.0.1"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.18"
noise = "0.8.2"
pollster = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
ron = "0.8.0"
serde = "1.0.164"
wgpu = "0.16.1"
wgpu_glyph = "0.20.0"
winit = {version="0.28.6", features=["serde"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

